# pve-computer-use

./: .gitignore  .oxfmtrc.json  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml
docs/guides/: secure-boot.md
recorder/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-build.sh
recorder/src/: args.rs  encoder.rs  lib.rs  main.rs  qemu_source.rs
recorder/tests/: live.md  pipeline_smoke.rs  playback_smoke.sh
src/: des.ts  framebuffer.ts  guidance.ts  helpers.ts  http.ts  index.ts  pve-api.test.ts  pve-api.ts  pve-auth.ts  pve-disk-config.test.ts  pve-disk-config.ts  rfb.ts  screenshot.ts  state.ts  terminal-session.ts  vnc-session.ts  windows-guest.ts
src/tools/: serial.ts  snapshots.ts  timeline.ts  vm.ts  vnc.ts
