[package]
name = "pve-record"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
qemu-display = { version = "0.2.1", features = ["qmp"] }
qapi = { version = "0.15", features = ["qmp"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
arc-swap = "1"
memmap2 = "0.9"
libc = "0.2"
nix = { version = "0.31.2", features = ["signal", "socket", "time", "uio"] }
humantime = "2.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
